--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+	<h1>Proyecto empresarial index.html</h1>
+	<<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem nisi ratione molestias, nesciunt dolorem ut ducimus perspiciatis nobis, aut consequatur maiores itaque culpa ipsum atque officia quia fugit fugiat suscipit.</p>
  </body>
 </html>
