--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<h1>Proyecto empresarial index.html</h1>
-	<<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem nisi ratione molestias, nesciunt dolorem ut ducimus perspiciatis nobis, aut consequatur maiores itaque culpa ipsum atque officia quia fugit fugiat suscipit.</p>
- </body>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem nisi ratione molestias,
+		nesciunt dolorem ut ducimus perspiciatis nobis, aut consequatur maiores itaque culpa ipsum atque officia quia fugit fugiat suscipit.</p>
+	<p>se corrigio</p>
+	</body>
 </html>
